tests/errors/sem.invalid-hat-usage.outside-macro.or
x := 0;

main :: () -> void {
    ^x;
};
